src/objects/inscor__Part_Tracking_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Part Tracking Lines</relationshipLabel>
        <relationshipName>Part_Tracking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Part Tracking Lines</relationshipLabel>
        <relationshipName>Part_Tracking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Tracking__c</fullName>
        <label>Part Tracking</label>
        <referenceTo>inscor__Part_Tracking__c</referenceTo>
        <relationshipLabel>Part Tracking Lines</relationshipLabel>
        <relationshipName>Part_Tracking_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Part Tracking Line</label>
    <nameField>
        <displayFormat>PTL-{0}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Tracking Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>